2004-06-24  n1xt3r  <n1xt3r@bluefalcon>

	* nb, plugins/01_mymood.off, plugins/entry/moods.sh, ChangeLog:
	Changed alt in <img /> tag from $mood_img to $mood_var.

2004-06-23  n1xt3r  <n1xt3r@bluefalcon>

	* plugins/rss.sh, ChangeLog, nb:
	- (build_archives): Categories built 1st.
	- Fixed category updating in RSS plugin.

2004-06-22  n1xt3r  <n1xt3r@bluefalcon>

	* ChangeLog, default/archives.html, default/archives/2004-01-18T17_12_12.htm, default/archives/cat_1.html, default/archives/monthly/2004-01.html, default/atom.xml, default/index.html, default/index.xml, default/parts/2004-01.htm, default/parts/blog_status.htm, default/parts/cat_1.htm, default/parts/fortune.htm, default/parts/news.htm, default/templates/entry.htm, nb:
	- Fixed bad HTML in default entry.
	- (build_archives): Fixed updating more than once bug.
	- (edit_blog),(delete_blog),(move_blog): Improved category updating.
	- (edit_blog): Removed code similar to find_categories().

2004-06-21  n1xt3r  <n1xt3r@bluefalcon>

	* ChangeLog, default/templates/entry.htm, plugins/entry/auto_break.sh:
	- Changed auto_break plugin to convert blank lines to <br /><br />.
	- Added <br /> after title in the entry template.

2004-06-18  n1xt3r  <n1xt3r@bluefalcon>

	* default/templates/permalink_entry.htm, nb, plugins/blog_links.sh:
	- Fixed missing cat_links.tmp bug in blog_links.sh plugin.
	- Fixed dead link to comments in permalink_entry.htm template.
	- Changed version to CVS-2.9.

	* ChangeLog, nb (build_archives):
	Slightly improved monthly archive updating.

	* ChangeLog, nb (find_categories):
	cat_num set unconditionally, for proper updating.

	* plugins/entry/moods.sh: Re-added moods.sh.

	* ChangeLog, nb, plugins/blog_links.sh, plugins/entry/moods.sh:
	- Removed make_placeholder function, no longer used.
	- VERSION changed to 2.8 in preperation for release.

2004-06-17  n1xt3r  <n1xt3r@bluefalcon>
