@@ -72,7 +72,10 @@ ENABLE_PLUGINS="1"
 # Enable auto-formatting of entries, e.g. line breaks translate to HTML - 0/1 = off/on.
 AUTO_FORMAT="1"
 
-# Tidy plugin - command arguments for tidy to use. see tidy's man pages.
+# Calendar plugin - command arguments for cal. see cal's man pages.
+CAL_ARGS=""
+
+# Tidy plugin - command arguments for tidy. see tidy's man pages.
 TIDY_ARGS=""
 
 # Fortune plugin should use fortunes from this file.
