@@ -72,9 +72,9 @@
   </div>
 
   <div id="links">
-    <div class="side">
-      <table border="0" cellspacing="4" cellpadding="0">
-        <caption>
+    <div class="calendar">
+      <table border="0" cellspacing="4" cellpadding="0" summary="Calendar with links to days with entries">
+        <caption class="calendarhead">
           June 2004
         </caption>
 
@@ -99,73 +99,73 @@
 
           <td align="center"></td>
 
-          <td align="center"><span>1</span></td>
+          <td align="center"><span class="calendar">1</span></td>
 
-          <td align="center"><span>2</span></td>
+          <td align="center"><span class="calendar">2</span></td>
 
-          <td align="center"><span>3</span></td>
+          <td align="center"><span class="calendar">3</span></td>
 
-          <td align="center"><span>4</span></td>
+          <td align="center"><span class="calendar">4</span></td>
 
-          <td align="center"><span>5</span></td>
+          <td align="center"><span class="calendar">5</span></td>
         </tr>
 
         <tr>
-          <td align="center"><span>6</span></td>
+          <td align="center"><span class="calendar">6</span></td>
 
-          <td align="center"><span>7</span></td>
+          <td align="center"><span class="calendar">7</span></td>
 
-          <td align="center"><span>8</span></td>
+          <td align="center"><span class="calendar">8</span></td>
 
-          <td align="center"><span>9</span></td>
+          <td align="center"><span class="calendar">9</span></td>
 
-          <td align="center"><span>10</span></td>
+          <td align="center"><span class="calendar">10</span></td>
 
-          <td align="center"><span>11</span></td>
+          <td align="center"><span class="calendar">11</span></td>
 
-          <td align="center"><span>12</span></td>
+          <td align="center"><span class="calendar">12</span></td>
         </tr>
 
         <tr>
-          <td align="center"><span>13</span></td>
+          <td align="center"><span class="calendar">13</span></td>
 
-          <td align="center"><span>14</span></td>
+          <td align="center"><span class="calendar">14</span></td>
 
-          <td align="center"><span>15</span></td>
+          <td align="center"><span class="calendar">15</span></td>
 
-          <td align="center"><span>16</span></td>
+          <td align="center"><span class="calendar">16</span></td>
 
-          <td align="center"><span>17</span></td>
+          <td align="center"><span class="calendar">17</span></td>
 
-          <td align="center"><span>18</span></td>
+          <td align="center"><span class="calendar">18</span></td>
 
-          <td align="center"><span>19</span></td>
+          <td align="center"><span class="calendar">19</span></td>
         </tr>
 
         <tr>
-          <td align="center"><span>20</span></td>
+          <td align="center"><span class="calendar">20</span></td>
 
-          <td align="center"><span>21</span></td>
+          <td align="center"><span class="calendar">21</span></td>
 
-          <td align="center"><span>22</span></td>
+          <td align="center"><span class="calendar">22</span></td>
 
-          <td align="center"><span>23</span></td>
+          <td align="center"><span class="calendar">23</span></td>
 
-          <td align="center"><span>24</span></td>
+          <td align="center"><span class="calendar">24</span></td>
 
-          <td align="center"><span>25</span></td>
+          <td align="center"><span class="calendar">25</span></td>
 
-          <td align="center"><span>26</span></td>
+          <td align="center"><span class="calendar">26</span></td>
         </tr>
 
         <tr>
-          <td align="center"><span>27</span></td>
+          <td align="center"><span class="calendar">27</span></td>
 
-          <td align="center"><span>28</span></td>
+          <td align="center"><span class="calendar">28</span></td>
 
-          <td align="center"><span>29</span></td>
+          <td align="center"><span class="calendar">29</span></td>
 
-          <td align="center"><span>30</span></td>
+          <td align="center"><span class="calendar">30</span></td>
         </tr>
       </table>
     </div>
@@ -222,7 +222,7 @@
     <div class="side">
       Total entries: 1<br />
       Last entry: January 18, 2004 5:12 PM<br />
-      Last updated: June 24, 2004 2:14 AM
+      Last updated: June 25, 2004 12:37 AM
     </div>
 
     <div class="powered">
