@@ -1,6 +1,6 @@
 	body {
 		margin:0px 0px 0px 0px;
-		background:#FFF;		
+		background:#FFF;
 		}
 	A 		{ color: #993300; text-decoration: none; }
 	A:link		{ color: #993300; text-decoration: none; }
@@ -17,7 +17,7 @@
 		font-family: verdana, arial, sans-serif;
 		background-color:#d34c09;
 		font-size:large;
-		font-weight:normal;	
+		font-weight:normal;
 		text-align:left;
   		padding:15px;
                 border-top:1px dotted #999;
@@ -42,7 +42,7 @@
 		font-weight:bold;
   		text-transform:lowercase;
 		}
-				
+
 	#content {
 		float: left;
 		width: 72%;
@@ -53,10 +53,10 @@
 
 	#container {
 		background:#FFF;
-		border:1px solid #FFF;		
+		border:1px solid #FFF;
 		}
 
-	#links {	
+	#links {
 		float: right;
 		padding-right:21px;
 		padding-left:15px;
@@ -67,7 +67,7 @@
 		border-bottom:1px dotted #999;
 		width:20%;
 		}
-		
+
 	.blog {
 		width:84%;
  		padding:15px;
@@ -97,7 +97,7 @@
 		font-size: small;
   		text-transform:uppercase;
 		color: #d34c09;
-		}			
+		}
 
 	#menu {
 		font-family:verdana, arial, sans-serif;
@@ -105,25 +105,25 @@
   		margin-bottom:15px;
 		background:#FFF;
 		text-align:center;
-		}		
+		}
 
-	.date	{ 
+	.date	{
 		font-family:verdana, arial, sans-serif; 
 		font-size: small; 
 		color: #666; 
 		border-bottom:1px solid #999;
 		margin-bottom:10px;
 		font-weight:bold;
-		}			
-		
-	.posted	{ 
+		}
+
+	.posted	{
 		font-family:verdana, arial, sans-serif; 
 		font-size: x-small; 
 		color: #000000; 
 		margin-bottom:25px;
 		}
-		
-		
+
+
 	.calendar {
 		font-family:verdana, arial, sans-serif;
 		color:#d34c09;
@@ -134,7 +134,7 @@
   		padding:2px;
 		text-align:left;
 		}
-	
+
 	.calendarhead {	
 		font-family:verdana, arial, sans-serif;
 		color:#d34c09;
@@ -144,9 +144,9 @@
 		letter-spacing: .3em;
   		background:#FFF;
   		text-transform:uppercase;
-		text-align:left;			
-		}	
-	
+		text-align:center;
+		}
+
 	.side {
 		font-family:verdana, arial, sans-serif;
 		color:#333;
@@ -154,9 +154,9 @@
 		font-weight:normal;
   		background:#FFF;
   		line-height:150%;
-  		padding:2px;				
-		}	
-		
+  		padding:2px;
+		}
+
 	.sidetitle {
 		font-family:verdana, arial, sans-serif;
 		color:#d34c09;
@@ -167,35 +167,35 @@
 		letter-spacing: .1em;
 		border-bottom:1px dotted #999;
 		text-align:center;
-  		text-transform:lowercase;		
-		}		
-	
+  		text-transform:lowercase;
+		}
+
 	.syndicate {
 		font-family:verdana, arial, sans-serif;
-		font-size:xx-small;		
+		font-size:xx-small;
   		line-height:150%;
   		padding:2px;
   		margin-top:10px;
 		text-align:center;
-  		background:#EEE;  		
- 		}	
-		
+  		background:#EEE;
+ 		}
+
 	.powered {
 		font-family:verdana, arial, sans-serif;
 		color:#666;
-		font-size:xx-small;		
+		font-size:xx-small;
 		font-weight:bold;
 		border-top:1px solid #CCC;
 		border-bottom:1px solid #CCC;
 		line-height:150%;
-		text-transform:uppercase; 
+		text-transform:uppercase;
 		padding:2px;
 		margin-top:10px;
 		text-align:center;
-		letter-spacing: .2em;					
-		}	
-		
-	
+		letter-spacing: .2em;
+		}
+
+
 	.comments-body {
 		font-family:verdana, arial, sans-serif;
 		color:#666;
@@ -204,19 +204,19 @@
   		background:#FFF;
   		line-height:120%;
  		padding-bottom:10px;
-  		padding-top:10px;		
- 		border-bottom:1px dotted #999; 					
-		}		
+  		padding-top:10px;
+ 		border-bottom:1px dotted #999;
+		}
 
 	.comments-post {
 		font-family:verdana, arial, sans-serif;
 		color:#666;
 		font-size:x-small;
 		font-weight:normal;
-  		background:#FFF;		
-		}	
-			
-	
+  		background:#FFF;
+		}
+
+
 	.trackback-url {
 		font-family:verdana, arial, sans-serif;
 		color:#666;
@@ -224,8 +224,8 @@
 		font-weight:normal;
   		background:#FFF;
   		line-height:150%;
- 		padding:5px;		
- 		border:1px dotted #999; 					
+ 		padding:5px;
+ 		border:1px dotted #999;
 		}
 
 
@@ -237,42 +237,42 @@
   		background:#FFF;
   		line-height:120%;
  		padding-bottom:10px;
-  		padding-top:10px;		
- 		border-bottom:1px dotted #999; 					
-		}		
+  		padding-top:10px;
+ 		border-bottom:1px dotted #999;
+		}
 
 	.trackback-post {
 		font-family:verdana, arial, sans-serif;
 		color:#666;
 		font-size:x-small;
 		font-weight:normal;
-  		background:#FFF;		
-		}	
+  		background:#FFF;
+		}
 
-		
-	.comments-head	{ 
-		font-family:verdana, arial, sans-serif; 
-		font-size:small; 
-		color: #666; 
+
+	.comments-head	{
+		font-family:verdana, arial, sans-serif;
+		font-size:small;
+		color: #666;
 		border-bottom:1px solid #999;
 		margin-top:20px;
 		font-weight:bold;
-  		background:#FFF;		
-		}		
+  		background:#FFF;
+		}
 
 	#banner-commentspop {
 		font-family:verdana, arial, sans-serif;
 		color:#FFF;
 		font-size:large;
 		font-weight:bold;
-		border-left:1px solid #FFF;	
-		border-right:1px solid #FFF;  		
-		border-top:1px solid #FFF;  		
+		border-left:1px solid #FFF;
+		border-right:1px solid #FFF;
+		border-top:1px solid #FFF;
   		background:#003366;
   		padding-left:15px;
   		padding-right:15px;
   		padding-top:5px;
-  		padding-bottom:5px;  		  		  			 
+  		padding-bottom:5px;
 		}
 
 	.intro {
