@@ -30,7 +30,7 @@ $NB_Entries
 
 <div id="links">
 
-<div class="side">
+<div class="calendar">
 $NB_Calendar
 </div>
 
