@@ -20,17 +20,7 @@
 <span class="description">$BLOG_DESCRIPTION</span>
 </div>
 
-<div id="container">
-
-<div id="links">
-
-<div class="side">
-$NB_Monthly_Calendar
-</div>
-
-</div>
-
-<div class="blog">
+<div id="content">
 
 <div id="menu">
 	<a href="$BLOG_URL_MAIN">Main</a>
@@ -40,6 +30,12 @@ $NB_Monthly_Calendar
 $NB_Entries
 </div>
 
+</div>
+
+<div id="links">
+
+<div class="calendar">
+$NB_Monthly_Calendar
 </div>
 
 </div>
