@@ -1,4 +1,4 @@
-#! /bin/bash
+#! /bin/sh --posix
 ############################################################
 #  NanoBlogger 2.9 Copyright 2004 n1xt3r (Kevin R. Wood)   #
 ############################################################
@@ -190,17 +190,15 @@ db_query=; cd "$CURR_PATH"
 
 # convert category number to existing category database
 cat_id(){
-if [ ! -z "$cat_num" ]; then
-	cat_query=`echo "$cat_num" |grep '[0-9]' |sed -e '/,/ s// /g; /[A-Z,a-z\)\.-]/d'` 
-	query_db
-	if [ ! -z "$cat_query" ]; then
-		for cat_id in $cat_query; do
-			cat_valid=`echo "$db_categories" |grep cat_"$cat_id".db`
-			echo "$cat_valid"
-			[ -z "$cat_valid" ] &&
-				echo "bad id('s)!"
-		done
-	fi
+cat_query=`echo "$cat_num" |grep '[0-9]' |sed -e '/,/ s// /g; /[A-Z,a-z\)\.-]/d'` 
+query_db
+if [ ! -z "$cat_query" ]; then
+	for cat_id in $cat_query; do
+		cat_valid=`echo "$db_categories" |grep cat_"$cat_id".db`
+		echo "$cat_valid"
+		[ -z "$cat_valid" ] &&
+			echo "bad id('s)!"
+	done
 fi
 }
 
@@ -307,7 +305,7 @@ fi
 NB_Entries=`cat "$MKPAGE_SRCFILE"`
 [ -z "$MKPAGE_OUTFILE" ] && die "output file not specified."
 [ ! -f "$MKPAGE_TMPLFILE" ] && die "template file '$MKPAGE_TMPLFILE' doesn't exist! bye."
-# Make sure the output directory is present before writing to it.
+# make sure the output directory is present before writing to it.
 mkdir -p `dirname "$MKPAGE_OUTFILE"`
 cat "$MKPAGE_TMPLFILE" > "$MKPAGE_OUTFILE".tmp
 load_template "$MKPAGE_OUTFILE".tmp
@@ -390,6 +388,7 @@ cycle_months_for(){
 # helps update relative categories
 find_categories(){
 UPDATE_CATLIST="$1"
+CAT_LIST=
 	build_catlist(){
 	if [ ! -z "$cat_var" ]; then
 		CAT_LIST="$cat_db"
@@ -405,14 +404,13 @@ for relative_entry in $UPDATE_CATLIST; do
 		build_catlist
 	done
 done
-cat_num=`for cat_id in $CAT_LIST; do echo "$cat_id"; done | sort -u |sed -e '/cat_/ s///g; /[.]db/ s///g'`
+[ -z "$CAT_LIST" ] && CAT_LIST="$db_catquery"
+if [ "$blog_update" = "all" ]; then query_db; CAT_LIST="$db_categories"; fi
 }
 
 # build category archives
 build_catarchives(){
-[ ! -z "$blog_update" ] && [ "$blog_update" = "all" ] || db_categories=
-db_catquery=`cat_id`
-[ ! -z "$db_catquery" ] && db_categories="$db_catquery"
+db_categories="$CAT_LIST"
 if [ ! -z "$db_categories" ]; then
 	for cat_arch in $db_categories; do
 		if [ -f "$NB_DATA_DIR/$cat_arch" ]; then
@@ -430,6 +428,7 @@ fi
 # create/update archives
 build_archives(){
 load_plugins plugins/archive
+nb_msg "generating archives ..."
 build_catarchives
 if [ "$blog_update" = "all" ]; then
 	cycle_months_for build_monthlyarchive
@@ -438,8 +437,6 @@ else
 	month=`date "+%Y-%m"`; this_month="$month"
 	query_db "$month"; build_monthlyarchive
 
-	# update modified parts of blog (deleted, edited, or moved)
-	nb_msg "checking for related parts ..."
 	# update relative monthly archives
 	MOD_MONTHS=`echo "$UPDATE_LIST" |sed -e '/^[ ]/ s///g' |cut -c1-7 |sort -ru`
 	for mod_month in $MOD_MONTHS; do
@@ -472,6 +469,7 @@ blog_update=`echo "$1" |sed -e '/\,/d; /[\)\.\-]/d'`
 [ -z "$blog_update" ] && blog_update="current"
 # query database and check for categories
 db_catquery=`cat_id`; check_catid
+find_categories "$UPDATE_LIST"
 if [ "$blog_update" = "all" ]; then
 	# remove all generated files for a clean build
 	rm -fr "$BLOG_DIR/$PARTS_DIR"/*
@@ -480,7 +478,7 @@ if [ "$blog_update" = "all" ]; then
 fi
 load_plugins plugins
 # build the archives
-nb_msg "generating index pages ..."
+nb_msg "generating $NB_FILETYPE pages ..."
 [ "$blog_update" != "main" ] && build_archives
 if [ "$blog_update" != "main" ] && [ "$ENTRY_ARCHIVES" = "1" ]; then
 	mkdir -p "$BLOG_DIR/$PERMALINKS_DIR"
@@ -488,6 +486,7 @@ if [ "$blog_update" != "main" ] && [ "$ENTRY_ARCHIVES" = "1" ]; then
 	rm -f "$BLOG_DIR/$PARTS_DIR"/permalinks.tmp
 fi
 # build main index
+nb_msg "generating main index page ..."
 make_archive current nocat "$ENTRY_TEMPLATE" news.htm
 make_page "$BLOG_DIR/$PARTS_DIR"/news.htm "$NB_TEMPLATE_DIR/$MAIN_TEMPLATE" "$BLOG_DIR"/index.$NB_FILETYPE
 }
@@ -533,7 +532,6 @@ if [ ! -z "$cat_num" ] && [ "$edit_num" = "cat" ]; then
 		echo "$usr_title" > "$NB_DATA_DIR/$db_catquery"
 		[ ! -z "$DB_RESULTS" ] && echo "$DB_RESULTS" >> "$NB_DATA_DIR/$db_catquery"
 		UPDATE_LIST="$DB_RESULTS"
-		find_categories "$UPDATE_LIST"
 		build_blog; exit 0
 	else
 		die "no changes were made! bye."
@@ -550,7 +548,7 @@ if [ -N "$NB_DATA_DIR/$Edit_EntryFile" ]; then
 	nb_msg "processing blog entry id: $NUMVAR ..."
 	read_entry "$NB_DATA_DIR/$Edit_EntryFile"
 	UPDATE_LIST="$Edit_EntryFile"
-	find_categories "$UPDATE_LIST"; build_blog
+	build_blog
 else
 	die "no changes were made! bye."
 fi
@@ -583,7 +581,6 @@ if [ ! -z "$cat_num" ] && [ "$delete_num" = "cat" ]; then
 	for cat_db in $cat_list; do
 		rm -f "$NB_DATA_DIR/$cat_db" "$BLOG_DIR/$ARCHIVES"/`chg_suffix "$cat_db"`
 	done
-	find_categories "$UPDATE_LIST"
 	build_blog; exit 0
 fi
 NUMVAR=`echo "$delete_num" |grep '[0-9]' |sed -e '/\,/ s// /g; /[A-Z,a-z\)\.\-]/d'`
@@ -605,7 +602,6 @@ for entry_id in $NUMVAR; do
 		DEL_LIST="$Delete_EntryFile"
 		[ "$DEL_LIST" != "$OLD_DELLIST" ] && DEL_LIST="$OLD_DELLIST $Delete_EntryFile"
 		OLD_DELLIST="$DEL_LIST"; UPDATE_LIST="$DEL_LIST"
-		find_categories "$UPDATE_LIST"
 		if [ ! -z "$cat_list" ]; then
 			for cat_db in $cat_list; do
 				cat_mod=`grep "$Delete_EntryFile" "$NB_DATA_DIR/$cat_db"`
@@ -674,7 +670,6 @@ for entry in $DB_RESULTS; do
 	echo " $id, $NB_EntryTitle $NB_Category"
 	oldcat_title=; cat_title=; NB_Category=
 done
-max_num=$id; [ -z "$max_num" ] && max_num=0
 }
 
 # move entries into other categories
@@ -703,7 +698,6 @@ for entry_id in $UPDATE_LIST; do
 		fi
 	fi
 done
-find_categories "$UPDATE_LIST"
 build_blog
 }
 
